--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,7 +125,7 @@
     }
 
     .outline-text {
-        text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
-            2px 2px 0 #000;
+        -webkit-text-stroke: 2px black;
+        text-shadow: 0 8px 0px lightblue;
     }
 }
